                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 17-05-2006 changed: cosmetic change to music scanner dialog + kai / trainer dialog.+
 - 17-05-2006 fixed: launching game with kai from my programs with trainer active crashed.
 - 17-05-2006 added: Esperanto language file (Thnx to taiq)
 - 17-05-2006 updated: Spanish language file (Thnx to jose_t)
 - 17-05-2006 updated: Swedish language file (Thnx to blittan)
 - 17-05-2006 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 17-05-2006 updated: German (Austrian) language file (Thnx to CEOMR)
 - 17-05-2006 updated: Russian language file (Thnx to que_)
 - 17-05-2006 fixed: only use pap wma codec if applicable.
 - 17-05-2006 fixed: some small issues in file browser (directory history in root, selected item label missed a /).
 - 17-05-2006 fixed: Crash when reloading skins in certain situations.
 - 17-05-2006 fixed: [ 1489037 ] Changing skin breaks scan to db.
 - 17-05-2006 fixed: Startup window of "My Music" didn't work.
 - 17-05-2006 added: Separated "MyVideos" window (id 6) from "MyVideoFiles" window (now id 24).  Does not require any skin changes.
 - 17-05-2006 fixed: Transparency on embedded xbe thumbnails was replaced with black.
 - 17-05-2006 fixed: [ 1488834 ] German Umlaute won't display correct in My Programs folders
 - 17-05-2006 added: Advanced setting <thumbsize> to specify the size XBMC caches thumbs at.
 - 17-05-2006 fixed: [ 1488180 ] PNG transparency error.
 - 17-05-2006 fixed: [ 1488630 ] Partymode then enqueue causes internal playlist to be added
 - 17-05-2006 fixed: [ 1488829 ] Python ControlTextBox ignores multiple linebreaks
 - 16-05-2006 fixed: Cleaned up the thumb code (for <folder>.tbn)