@@ -129,12 +129,15 @@
 
     <font>
       <name>special12</name>
-      <filename>special-normal-pal.xpr</filename>
+      <filename>Arial.ttf</filename>
+      <size>19</size>
     </font>
 
     <font>
       <name>special13</name>
-      <filename>special-bold-pal.xpr</filename>
+      <filename>Arial.ttf</filename>
+      <size>20</size>
+      <style>bold</style>
     </font>
 
     <font>
